# jackcheater

./: .gitignore  README.md  app.py  buildozer.spec  extra_manifest.xml  main.py  pyproject.toml
res/xml/: device_filter.xml
src/: agent.py
src/serial/: __init__.py  android.py  linux.py
